staging / HTML-CSS-learning-1 	- Подправил шаблон, добавив шаблон раздела

--- a/stage1/index.html
+++ b/stage1/index.html
@@ -14,7 +14,8 @@
     <header class="container background-grey">
         <nav class="menu">
             <ul>
-                <li><a href="HTML/index.html">HTML</a></li>
+                <li><a href="#">INDEX</a></li>
+                <li><a href="HTML/">HTML</a></li>
             </ul>
         </nav>
     </header>
@@ -22,16 +23,19 @@
     <main class="container">
         <aside class="display-inline-block background-grey">
             <ul>
-                <li><a href="#overview">Оглавление</a></li>
+                <li><a href="#">Пункт меню</a></li>
+                <li><a href="#">Пункт меню</a></li>
+                <li><a href="#">Пункт меню</a></li>
+                <li><a href="#">Пункт меню</a></li>
+                <li><a href="#">Пункт меню</a></li>
             </ul>
         </aside>
         <section class="display-inline-block background-grey">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro quam dolores optio consectetur. Illum
-                sint eligendi in, quod asperiores voluptatum adipisci minus provident dolor nesciunt doloremque
-                nulla
-                iste saepe odit minima sequi totam necessitatibus ad porro amet tempora numquam nobis? Magnam
-                reiciendis
-                accusamus natus possimus iure soluta cum modi sint?</p>
+            <article>
+                <h2 id="">Заголовок</h2>
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repellat iure cum ad
+                    veniam! Quisquam voluptatum tempora iusto aspernatur?</span>
+            </article>
         </section>
     </main>
 </body>
