--- a/stage1/index.html
+++ b/stage1/index.html
@@ -11,33 +11,47 @@
 </head>
 
 <body>
-    <header class="container background-grey">
-        <nav class="menu">
-            <ul>
-                <li><a href="#">INDEX</a></li>
-                <li><a href="HTML/">HTML</a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="container background-grey">
+    <nav class="menu">
+        <ul>
+            <li><span>INDEX</span></li>
+            <li><a href="HTML/">HTML</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <main class="container">
-        <aside class="display-inline-block background-grey">
-            <ul>
-                <li><a href="#">Пункт меню</a></li>
-                <li><a href="#">Пункт меню</a></li>
-                <li><a href="#">Пункт меню</a></li>
-                <li><a href="#">Пункт меню</a></li>
-                <li><a href="#">Пункт меню</a></li>
-            </ul>
-        </aside>
-        <section class="display-inline-block background-grey">
-            <article>
-                <h2 id="">Заголовок</h2>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repellat iure cum ad
+<main class="container">
+    <aside class="display-inline-block background-grey">
+        <ul id="overview">
+        </ul>
+
+
+    </aside>
+    <section class="display-inline-block background-grey">
+        <article>
+            <h2 id="Hello">Hello</h2>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repellat iure cum ad
                     veniam! Quisquam voluptatum tempora iusto aspernatur?</span>
-            </article>
-        </section>
-    </main>
+        </article>
+    </section>
+</main>
+
+<script>
+    let headers = document.getElementsByTagName("h2");
+    let overview = document.getElementById("overview");
+
+    console.log(headers);
+    console.log(overview);
+
+    for (let i = 0; i < headers.length; ++i) {
+        let element = document.createElement("li");
+        let link = document.createElement("a");
+        link.setAttribute("href", "#" + headers[i].id);
+        link.innerHTML = headers[i].innerHTML;
+        element.appendChild(link);
+        overview.appendChild(element);
+    }
+</script>
 </body>
 
 </html>
