--- a/stage1/index.html
+++ b/stage1/index.html
@@ -29,29 +29,14 @@
     </aside>
     <section class="display-inline-block background-grey">
         <article>
-            <h2 id="Hello">Hello</h2>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repellat iure cum ad
-                    veniam! Quisquam voluptatum tempora iusto aspernatur?</span>
+            <h2 id="overview">Краткая сводка</h2>
+            <span>На данных страницах будут собраны некоторые примеры, изученные с помощью сайта <a
+                    href="https://html5book.ru/">HTML book</a>. Посмотреть примеры можно будет по ссылкам в шапке сайта</span>
         </article>
     </section>
 </main>
 
-<script>
-    let headers = document.getElementsByTagName("h2");
-    let overview = document.getElementById("overview");
-
-    console.log(headers);
-    console.log(overview);
-
-    for (let i = 0; i < headers.length; ++i) {
-        let element = document.createElement("li");
-        let link = document.createElement("a");
-        link.setAttribute("href", "#" + headers[i].id);
-        link.innerHTML = headers[i].innerHTML;
-        element.appendChild(link);
-        overview.appendChild(element);
-    }
-</script>
+<script src="table_of_content.js"></script>
 </body>
 
 </html>
