--- a/stage1/index.html
+++ b/stage1/index.html
@@ -29,7 +29,7 @@
     </aside>
     <section class="display-inline-block background-grey">
         <article>
-            <h2 id="overview">Краткая сводка</h2>
+            <h2 id="1">Краткая сводка</h2>
             <span>На данных страницах будут собраны некоторые примеры, изученные с помощью сайта <a
                     href="https://html5book.ru/">HTML book</a>. Посмотреть примеры можно будет по ссылкам в шапке сайта</span>
         </article>
