staging / HTML-CSS-learning-2     - Перевел проект на heroku

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>heroku test</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
+
+    <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    :)
+<header class="container background-grey">
+    <nav class="menu">
+        <ul>
+            <li><span>INDEX</span></li>
+            <li><a href="HTML/">HTML</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main class="container">
+    <aside class="display-inline-block background-grey">
+        <ul id="overview">
+        </ul>
+
+
+    </aside>
+    <section class="display-inline-block background-grey">
+        <article>
+            <h2 id="1">Краткая сводка</h2>
+            <span>На данных страницах будут собраны некоторые примеры, изученные с помощью сайта <a
+                    href="https://html5book.ru/">HTML book</a>. Посмотреть примеры можно будет по ссылкам в шапке сайта</span>
+        </article>
+    </section>
+</main>
+
+<script src="table_of_content.js"></script>
 </body>
+
 </html>
