--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
 
-    <link rel="stylesheet" href="../main.css">
+    <link href="../main.css">
 </head>
 
 <body>
 <header class="container background-grey">
     <nav class="menu">
         <ul>
-            <li><a href="../">INDEX</a></li>
+            <li><a href="">INDEX</a></li>
             <li><span>HTML</span></li>
         </ul>
     </nav>
