--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
 
-    <link rel="stylesheet" type="text/html" href="../main.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 
 <body>
