HTML-CSS-learning-2 / dev / checkboxes     - Сделал чекбокс

--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -14,7 +14,7 @@
 <header class="container background-grey">
     <nav class="menu">
         <ul>
-            <li><a href="">INDEX</a></li>
+            <li><a href="../">INDEX</a></li>
             <li><span>HTML</span></li>
         </ul>
     </nav>
