--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,12 @@
             <span>На данных страницах будут собраны некоторые примеры, изученные с помощью сайта <a
                     href="https://html5book.ru/">HTML book</a>. Посмотреть примеры можно будет по ссылкам в шапке сайта</span>
         </article>
+        <article>
+            <h2 id="2">Ссылки для дз</h2>
+            <ul>
+                <li><a href="./checkboxes/">Чекбокс</a></li>
+            </ul>
+        </article>
     </section>
 </main>
 
