--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
             <h2 id="2">Ссылки для дз</h2>
             <ul>
                 <li><a href="./checkboxes/">Чекбокс</a></li>
+                <li><a href="./selectors-relations-filters/">Селекторы</a></li>
             </ul>
         </article>
     </section>
