--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML</title>
+    <title>PAGE</title>
 
     <link rel="stylesheet" href="../main.css">
 </head>
@@ -112,7 +112,8 @@
         </article>
         <article>
             <h2 id="forms">Формы</h2>
-            <p>Далее представлена простая форма. Важно, обратите внимание, что заполнен атрибут action и method, без них нормально работать не будет</p>
+            <p>Далее представлена простая форма. Важно, обратите внимание, что заполнен атрибут action и method, без них
+                нормально работать не будет</p>
             <form name="test_form" autocomplete="on" method="post" action="../form_check.php">
                 <fieldset>
                     <legend>Пример формы</legend>
