--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
             <ul>
                 <li><a href="./checkboxes/">Чекбокс</a></li>
                 <li><a href="./selectors-relations-filters/">Селекторы</a></li>
+                <li><a href="./flex-example/">FLEX</a></li>
+                <li><a href="./box-size-example">Пример по box-size</a> </li>
             </ul>
         </article>
     </section>
