--- a/src/selectors-relations-filters/index.html
+++ b/src/selectors-relations-filters/index.html
@@ -365,7 +365,7 @@ i {
         border: 6px yellow solid;
     }
 
-    .pseudoclass-struct-type.viewport *:first-of-type:before {
+    .pseudoclass-struct-type.viewport *:first-of-type::before {
         content: 'first of type';
         display: inline-block;
     }
