--- a/src/checkboxes/index.html
+++ b/src/checkboxes/index.html
@@ -31,34 +31,12 @@
             <p>Далее на странице представлены чекбоксы, реализованные через стили</p>
         </article>
         <article>
-            <h2 id="css">Стилевые чекбоксы</h2>
             <form action="">
                 <div class="field-line">
-                        <span class="checkbox-daw">
-                            <input type="checkbox" id="field1"><label for="field1" class="fake-checkbox"></label>
-                        </span>
-                    <span>Просто чекбокс</span>
-                </div>
-
-                <div class="field-line">
-                        <span class="checkbox-daw">
-                            <input type="checkbox" id="field2" disabled><label for="field2"
-                                                                               class="fake-checkbox"></label>
-                        </span>
-                    <span>disabled чекбокс</span>
-                </div>
-            </form>
-        </article>
-        <article>
-            <form action="">
-                <div class="field-line">
-                    <span class="checkbox-flag">
-                        <input type="checkbox" id="flag"><label class="fake-checkbox" for="flag"></label>
-                    </span>
-                </div>
-                <div class="field-line">
-                    <span class="checkbox-flag">
-                        <input type="checkbox" id="flag1" disabled><label class="fake-checkbox" for="flag1"></label>
+                    <span class="checkbox checkbox__type-flag">
+                        <input type="checkbox" class="checkbox__hiden-part" id="flag">
+                                                <label class="checkbox__visible-part"
+                                                       for="flag"></label>
                     </span>
                 </div>
             </form>
@@ -69,91 +47,9 @@
 <style>
 
     .field-line {
-        font-size: 16px;
+        font-size: 30px;
     }
 
-    input[type="checkbox"] {
-        display: block;
-        z-index: -1;
-        opacity: 0;
-        position: absolute;
-        width: 0;
-        height: 0;
-        border: none;
-    }
-
-    .checkbox-daw .fake-checkbox {
-        z-index: 0;
-        display: inline-block;
-        width: 1em;
-        height: 1em;
-        border: 1px solid gray;
-        position: relative;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: 70% 70%;
-    }
-
-    .checkbox-daw input[type="checkbox"]:checked + .fake-checkbox {
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%234182c0' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-    }
-
-    .checkbox-daw input[type="checkbox"]:hover + .fake-checkbox {
-        box-shadow: 0 0 2px cornflowerblue;
-    }
-
-    .checkbox-daw input[type="checkbox"]:focus + .fake-checkbox {
-        box-shadow: 0 0 4px cornflowerblue;
-    }
-
-    .checkbox-daw input[type="checkbox"]:active + .fake-checkbox {
-        box-shadow: 0 0 4px cornflowerblue;
-        border-color: #4182c0;
-    }
-
-    .checkbox-daw input[type="checkbox"]:disabled + .fake-checkbox {
-        background-color: grey;
-    }
-
-    .checkbox-flag .fake-checkbox {
-        width: 2em;
-        height: calc(1em + 2px);
-        border: 1px solid red;
-        border-radius: 10px;
-        display: inline-block;
-        position: relative;
-    }
-
-    .checkbox-flag .fake-checkbox:after {
-        content: ' ';
-        display: block;
-        width: calc(1em - 2px);
-        height: calc(1em - 2px);
-        position: absolute;
-        left: 0;
-        border-radius: 50%;
-        border: 1px solid red;
-        background-color: red;
-
-        transition: all ease 0.2s;
-    }
-
-    .checkbox-flag input[type="checkbox"]:checked + .fake-checkbox:after {
-        left: 50%;
-    }
-
-    .checkbox-flag input[type="checkbox"]:hover + .fake-checkbox,
-    .checkbox-flag input[type="checkbox"]:focus + .fake-checkbox {
-        box-shadow: 0 0 10px red;
-    }
-
-    .checkbox-flag input[type="checkbox"]:active + .fake-checkbox:after {
-        background-color: orange;
-    }
-
-    .checkbox-flag input[type="checkbox"]:disabled + .fake-checkbox:after {
-        background-color: darkred;
-    }
 </style>
 
 <script src="../table_of_content.js"></script>
