--- a/src/yandex/index.html
+++ b/src/yandex/index.html
@@ -11,54 +11,177 @@
 </head>
 <body>
     <main class="content">
-        <div class="top-bar">
-            <div class="container headline">
+        <section class="top-bar container__top-bar">
+            <div class="container _headline">
                 <div class="row">
-                    <div class="headline__item headline__left">
-                        <a class="link link_hover-red geolink" href="">
-                            <svg class="geolink__icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                 viewBox="0 0 16 16">
-                                <path fill="currentColor"
-                                      d="M13.07 3.58l-4 9.98a.5.5 0 0 1-.95-.06L7 9 2.5 7.88a.5.5 0 0 1-.06-.95l9.98-4a.5.5 0 0 1 .65.65z"></path>
-                            </svg>
-                            <span class="link__text geolink__city">Москва</span>
+                    <div class="item headline__item _left">
+                        <a class="link  _geolink" href="">
+                            <span class="link__item _type-icon icon _geo"></span>
+                            <span class="link__item _type-text">Москва</span>
                         </a>
-                        <span class="datetime">
-                            <span class="datetime__day-number">19</span><span
-                                class="datetime__month">октября,</span><span
-                                class="datetime__day-name">вторник</span><span class="datetime__time">12:24</span>
+                        <span class="datetime headline-item">
+                            <span class="datetime__item datetime__day-number">19</span>
+                            <span class="datetime__item datetime__month">октября,</span>
+                            <span class="datetime__item datetime__day-name">вторник</span>
+                            <span class="datetime__item datetime__time">12 <span class="blink">:</span> 24</span>
                         </span>
                     </div>
-                    <div class="headline__item headile__right">
+                    <div class="headline__item headline__right">
                         <div class="icon-bar">
-                            <a href="#" class="link icon-bar__item icon icon-cart">
+                            <a href="#" class="link icon-bar__item">
+                                <span class="link__item _type-icon icon max-size _smaller _cart _hovered"></span>
                             </a>
-                            <a href="#" class="link icon-bar__item icon-notifier__bell">
-                                <svg class="" xmlns="http://www.w3.org/2000/svg" width="36"
-                                     height="36" focusable="false">
-                                    <path class="notifier__clapper"
-                                          d="M18 30a3 3 0 0 0 3-3c0-1.657-1.5 0-3-17-1.5 17-3 15.343-3 17a3 3 0 0 0 3 3z"></path>
-                                    <path class="notifier__bell"
-                                          d="M15.687 12.5l.3-.164a1.5 1.5 0 0 0 .75-1.021l.142-.712a.75.75 0 0 1 .736-.603h.77a.75.75 0 0 1 .736.603l.142.712a1.5 1.5 0 0 0 .75 1.02l.3.165a5.586 5.586 0 0 1 3.24 4.47l.54 4.863c.1.906.563 1.733 1.282 2.292l.354.275a1.5 1.5 0 0 1 .534 1.548L26.25 26a1.32 1.32 0 0 1-1.28 1H11.03a1.32 1.32 0 0 1-1.28-1l-.013-.052a1.5 1.5 0 0 1 .534-1.548l.354-.275a3.375 3.375 0 0 0 1.282-2.292l.54-4.864a5.586 5.586 0 0 1 3.24-4.469z"></path>
-                                </svg>
+                            <a href="#" class="link icon-bar__item">
+                                <span class="link__item _type-icon icon max-size _bell _hovered"></span>
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="container mainline">
-                <div class="row">
-                    <div class="news">
-                        <div class="news__top-line">
-                            <a href="#" class="link link_header link_active">Сейчас в СМИ</a>
-                            <a href="#" class="link link_header">В Москве</a>
-                            <a href="#" class="link link_header">Интересное</a>
-                            <a href="#" class="link link_header link_warning">Короновирус</a>
+        </section>
+        <section class="mainline container__mainline">
+            <div class="container _mainline">
+                <section class="info-content">
+                    <section class="news mainline__item  info-content__left">
+                        <header class="category-list news__header">
+                            <a href="#" class="link category-list__item _active">
+                                <span class="link__item _type-text _category category-list__text">Сейчас в СМИ</span>
+                            </a>
+                            <a href="#" class="link category-list__item _category">
+                                <span class="link__item _type-text  category-list__text">В Москве</span>
+                            </a>
+                            <a href="#" class="link category-list__item _category">
+                                <span class="link__item _type-text  category-list__text">hi-thech</span>
+                            </a>
+                            <a href="#" class="link category-list__item _warning ">
+                                <span class="link__item _type-text  category-list__text">Коронавирус</span>
+                            </a>
+                        </header>
+                        <section class="news__body">
+                            <div class="news-list">
+                                <div class="link  news-list__item">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__item _type-icon news-list__logo">
+                                    <a href="#" class="link__item _type-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipisicing elit. At cumque labore, necessitatibus sint tempora veritatis.</a>
+                                </div>
+                                <div class="link  news-list__item">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__item _type-icon news-list__logo">
+                                    <a href="#" class="link__item _type-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipisicing
+                                        elit. Maxime, quae?</a>
+                                </div>
+                                <div class="link  news-list__item">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__item _type-icon news-list__logo">
+                                    <a href="#" class="link__item _type-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipisicing
+                                        elit. Consequatur, nostrum!</a>
+                                </div>
+                                <div class="link  news-list__item">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__item _type-icon news-list__logo">
+                                    <a href="#" class="link__item _type-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipisicing
+                                        elit. Aliquid, tenetur.</a>
+                                </div>
+                                <div class="link  news-list__item">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__item _type-icon news-list__logo">
+                                    <a href="#" class="link__item _type-text">Lorem ipsum dolor sit amet, consectetur
+                                        adipisicing
+                                        elit. Accusantium, dolores.</a>
+                                </div>
+                            </div>
+                        </section>
+                        <footer class="news__footer">
+                            <div class="values-list">
+                                <div class="values-list__item">
+                                    <a href="#" class="link _bolder values-list__name">USD</a>
+                                    <span class="values-list__value">70,31</span>
+                                    <span class="values-list__diff">-0,83</span>
+                                </div>
+                                <div class="values-list__item">
+                                    <a href="#" class="link _bolder values-list__name">EUR</a>
+                                    <span class="values-list__value">81,86</span>
+                                    <span class="values-list__diff">-0,80</span>
+                                </div>
+                                <div class="values-list__item">
+                                    <a href="#" class="link _bolder values-list__name">НЕФТЬ</a>
+                                    <span class="values-list__value">85,88</span>
+                                    <span class="values-list__diff">+1,73%</span>
+                                </div>
+                            </div>
+                        </footer>
+                    </section>
+                    <section class="info-content__right mainline__item">
+                        <div class="col">
+                            <section class="weather">
+                                <header class="category-list weather__header">
+                                    <a href="#" class="link category-list__item _active">
+                                        <span class="link__item _type-text category-list__text">Погода</span>
+                                    </a>
+                                    <a href="#" class="link category-list__item">
+                                        <span class="link__item _type-text category-list__text">Карта осадков</span>
+                                    </a>
+                                </header>
+                                <section class="weather__body">
+                                    <a href="" class="link weather__item">
+                                        <img src="./images/news_logo.png" alt=""
+                                             class="link__item _type_image weather__image">
+                                        <span class="link__item _type-text">+7°</span>
+                                    </a>
+                                    <a href="" class="link weather__item _small _text-morning">
+                                        <img src="./images/news_logo.png" alt=""
+                                             class="link__item _type_image weather__image">
+                                        <span class="link__item _type-text">+7°</span>
+                                    </a>
+                                    <a href="" class="link weather__item _small _text-day">
+                                        <img src="./images/news_logo.png" alt=""
+                                             class="link__item _type_image weather__image">
+                                        <span class="link__item _type-text">+7°</span>
+                                    </a>
+                                    <a href="" class="link weather__item _small _text-evening">
+                                        <img src="./images/news_logo.png" alt=""
+                                             class="link__item _type_image weather__image">
+                                        <span class="link__item _type-text">+7°</span>
+                                    </a>
+                                </section>
+                            </section>
+                            <section class="road">
+                                <header class="category-list road__header">
+                                    <a href="#" class="link category-list__item _active">
+                                        <span class="link__item _type-text category-list__text">Пробки</span>
+                                    </a>
+                                    <a href="#" class="link category-list__item">
+                                        <span class="link__item _type-text category-list__text">Метро</span>
+                                    </a>
+                                    <a href="#" class="link category-list__item">
+                                        <span class="link__item _type-text category-list__text">Расписания</span>
+                                    </a>
+                                    <a href="#" class="link category-list__item">
+                                        <span class="link__item _type-text category-list__text">Такси</span>
+                                    </a>
+                                </header>
+                                <section class="road__body">
+                                    <a href="" class="link road__image">
+                                        <img src="./images/news_logo.png" alt="" class="link__item _type-image">
+                                    </a>
+                                    <a href="" class="link road__grade">
+                                        <span class="link__item _type-text">5</span>
+                                    </a>
+                                    <a href="" class="link road__text">
+                                        <span class="link _type-text">Ближайшие 5 часов движение затруднено</span>
+                                    </a>
+                                </section>
+                            </section>
                         </div>
-                    </div>
-                </div>
+                    </section>
+                </section>
             </div>
-        </div>
+        </section>
+    
     </main>
 </body>
 </html>
