--- a/src/yandex/index.html
+++ b/src/yandex/index.html
@@ -11,6 +11,27 @@
     <link rel="stylesheet" href="style/block_link/link.sass">
 </head>
 <body>
+    <aside class="mail-bar">
+        <div class="mail-bar__item widget mail">
+            <a href="#" class="mail__item _mail-line link _hover-red">
+                <span class="link__content _type-text _text-white _first-red">Дмитрий</span>
+                <img src="./images/news_logo.png" alt=""
+                     class="link__content _type-image _bigger _no-margin _rounded">
+            </a>
+            <a href="#" class="mail__item link _text-white _hover-red">
+                <span>Почта</span>
+                <span class="mail__messages-total">1500</span>
+            </a>
+            <a href="#" class="mail__item link _text-white _hover-red">Диск</a>
+        </div>
+        <div class="mail-bar__item widget _hover-jump plus">
+            <a href="" class="link _hover-red">
+                <img src="./images/news_logo.png" alt="" class="link__content _type-image _bigger">
+                <span class="link_content _type-text">150</span>
+                <span class="link_content _type-text">баллов</span>
+            </a>
+        </div>
+    </aside>
     <main class="content">
         <section class="top-bar">
             <div class="row">
@@ -61,14 +82,14 @@
                                 <a class="news-list__item link _hover-red ">
                                     <img src="./images/news_logo.png" alt=""
                                          class="link__content _type-icon news-list__logo">
-                                    <span href="#" class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
+                                    <span class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
                                         consectetur
                                         adipisicing elit. At cumque labore, necessitatibus sint tempora veritatis.</span>
                                 </a>
                                 <a class="news-list__item link _hover-red">
                                     <img src="./images/news_logo.png" alt=""
                                          class="link__content _type-icon news-list__logo">
-                                    <span href="#" class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
+                                    <span class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
                                         consectetur
                                         adipisicing
                                         elit. Maxime, quae?</span>
@@ -76,7 +97,7 @@
                                 <a class="news-list__item link _hover-red ">
                                     <img src="./images/news_logo.png" alt=""
                                          class="link__content _type-icon news-list__logo">
-                                    <span href="#" class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
+                                    <span class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
                                         consectetur
                                         adipisicing
                                         elit. Consequatur, nostrum!</span>
@@ -84,7 +105,7 @@
                                 <a class="news-list__item link _hover-red ">
                                     <img src="./images/news_logo.png" alt=""
                                          class="link__content _type-icon news-list__logo">
-                                    <span href="#" class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
+                                    <span class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
                                         consectetur
                                         adipisicing
                                         elit. Aliquid, tenetur.</span>
@@ -92,7 +113,7 @@
                                 <a class="news-list__item link _hover-red ">
                                     <img src="./images/news_logo.png" alt=""
                                          class="link__content _type-icon news-list__logo">
-                                    <span href="#" class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
+                                    <span class="link__content _type-text _text-white">Lorem ipsum dolor sit amet,
                                         consectetur
                                         adipisicing
                                         elit. Accusantium, dolores.</span>
@@ -266,11 +287,131 @@
         </section>
         <section class="zen-section">
             <div class="container _auto-center">
-                <section class="zen-section__main-part">
-                </section>
-                <aside class="zen-section__side-part"></aside>
+                <div class="zen-section__wrapper">
+                    <section class="zen-section__main-part">
+                        <article class="zen-section__elem _hover-lighter">
+                            <a href="#" class="zen-article">
+                                <div class="zen-article__container">
+                                    <div class="zen-article__header">
+                                        <a href="" class="zen-article__publisher link">
+                                            <img src="./images/news_logo.png" alt=""
+                                                 class="link__content _type_image _rounded _bigger">
+                                            <span class="link__content _type-text">Яндекс.Новости</span>
+                                        </a>
+                                        <div class="zen-article__buttons icon-bar">
+                                            <a href="#" class="icon-bar__item link _hover-opacity">
+                                                <span class="link__content _type-icon icon _smaller _person-plus"></span>
+                                            </a>
+                                            <a href="#" class="icon-bar__item link _hover-opacity">
+                                                <span class="link__content _type-icon icon _smaller _dots"></span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="zen-article__content">
+                                        <img src="./images/news_logo.png" alt="" class="zen-article__preview">
+                                        <section class="zen-article__info">
+                                            <h4 class="zen-article__headline">Lorem ipsum dolor sit amet,
+                                                consectetur.</h4>
+                                            <span class="zen-article__short-view">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deserunt, modi. At debitis, illum. Aperiam culpa laboriosam laborum obcaecati reprehenderit!</span>
+                                            <span class="zen-article__date">16 августа</span>
+                                        </section>
+                                    </div>
+                                    <div class="zen-article__social social">
+                                        <a href="#" class="social__people _hover-lighter">
+                                            <div class="image-bar">
+                                                <img src="./images/news_logo.png" alt="" class="image-bar__elem">
+                                                <img src="./images/news_logo.png" alt="" class="image-bar__elem">
+                                            </div>
+                                            <span class="social__counter">
+                                                <span class="social__counter-number">999</span> коментариев
+                                            </span>
+                                        </a>
+                                        <div class="social__buttons icon-bar">
+                                            <a href="#" class="icon-bar__item link _hover-opacity">
+                                                <span class="link__content _type-icon icon _smaller _thumb-up"></span>
+                                            </a>
+                                            <a href="#" class="icon-bar__item link _hover-opacity">
+                                                <span class="link__content _type-icon icon _smaller _thumb-down"></span>
+                                            </a>
+                                            <a href="#" class="icon-bar__item link _hover-opacity">
+                                                <span class="link__content _type-icon icon _smaller _arrow-share"></span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </article>
+                    </section>
+                    <aside class="zen-section__side-part">
+                        <article class="zen-section__elem zen-categories">
+                            <a href="#" class="zen-categories__header link">
+                                <img src="./images/news_logo.png" alt=""
+                                     class="link__content _type-image _rounded _bigger">
+                                <span class="link__content _type-text">Дзен</span>
+                            </a>
+                            <span class="zen-categories__subheader">рекомендуем</span>
+                            <ul class="zen-categories__list categories-list">
+                                <li class="categories-list__elem link _hover-red">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__content _type-image _bigger _further">
+                                    <span class="link__content _type-text">Hello worlds</span>
+                                </li>
+                                <li class="categories-list__elem link _hover-red">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__content _type-image _bigger _further">
+                                    <span class="link__content _type-text">Hello worlds</span>
+                                </li>
+                                <li class="categories-list__elem link _hover-red">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__content _type-image _bigger _further">
+                                    <span sclass="link__content _type-text">Hello worlds</span>
+                                </li>
+                                <li class="categories-list__elem link _hover-red">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__content _type-image _bigger _further">
+                                    <span sclass="link__content _type-text">Hello worlds</span>
+                                </li>
+                                <li class="categories-list__elem link _hover-red">
+                                    <img src="./images/news_logo.png" alt=""
+                                         class="link__content _type-image _bigger _further">
+                                    <span sclass="link__content _type-text">Hello worlds</span>
+                                </li>
+                            </ul>
+                        </article>
+                    </aside>
+                </div>
             </div>
         </section>
     </main>
+    <footer class="page-footer">
+        <section class="page-footer__links-list link-bar">
+            <a href="#" class="link _hover-red">
+                <span class="link__content _type-text">Lorem.</span>
+            </a>
+            <a href="#" class="link _hover-red _footer">
+                <span class="link__content _type-text">Laudantium.</span>
+            </a>
+            <a href="#" class="link _hover-red _footer">
+                <span class="link__content _type-text">Commodi?</span>
+            </a>
+            <a href="#" class="link _hover-red _footer">
+                <span class="link__content _type-text">Incidunt.</span>
+            </a>
+            <a href="#" class="link _hover-red _footer">
+                <span class="link__content _type-text">Sunt.</span>
+            </a>
+            <a href="#" class="link _hover-red _footer">
+                <span class="link__content _type-text">Vero!</span>
+            </a>
+        </section>
+        <section class="page-footer__links-list link-bar">
+            <a href="#" class="link _hover-red _footer">
+                <span class="link__content _type-text">Lorem.</span>
+            </a>
+            <a href="#" class="link _hover-red _footer">
+                <span class="link__content _type-text">Laudantium.</span>
+            </a>
+        </section>
+    </footer>
 </body>
 </html>
