HTML-CSS-learning-2 / dev / yandex     - Убрал лишние файлы

--- a/src/yandex/index.html
+++ b/src/yandex/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     
     <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="style/block_link/link.sass">
+    <link rel="stylesheet" href="style/blocks/link/link.sass">
 </head>
 <body>
     <aside class="mail-bar">
