HTML-CSS-learning-2 / dev / yandex     -

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
                     <li><a href="./flex-example/">FLEX</a></li>
                     <li><a href="./box-size-example">Пример по box-size</a></li>
                     <li><a href="./yandex">yandex</a></li>
+                    <li><a href="./mail">yandex</a></li>
                 </ul>
             </article>
         </section>
