HTML-CSS-learning-2 / dev / yandex     -

--- a/src/mail/index.html
+++ b/src/mail/index.html
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="body__right">
-                <section class="category-list _search-nav">
+                <section class="body__elem _spaced category-list _search-nav">
                     <a href="#" class="category-list__item _active link">
                         <span class="link__content _bold _additional-color _hover-color-main">Поиск в интернете</span>
                     </a>
@@ -181,8 +181,8 @@
                         <span class="link__content _additional-color _hover-color-main">Ответы</span>
                     </a>
                 </section>
-                <section class="search-line">
-                    <div class="layout ">
+                <section class="body__elem search-line">
+                    <div class="layout">
                         <div class="layout__elem _full-line search-bar">
                             <div class="search-bar__search-line search">
                                 <form class="search__form" action="">
@@ -193,6 +193,56 @@
                                 </form>
                             </div>
                         </div>
+                    </div>
+                </section>
+                <section class="body__elem _spaced">
+                    <section class="category-list _news">
+                        <a href="#" class="category-list__item _active link">
+                            <span class="link__content _bold _additional-color _hover-color-main">Поиск в интернете</span>
+                        </a>
+                        <a href="" class="category-list__item link" tabindex="-1">
+                        <span class="link__content _additional-color _hover-color-main"
+                              tabindex="-1">Соцсети</span>
+                        </a>
+                        <a href="" class="category-list__item link" tabindex="-1">
+                            <span class="link__content _additional-color _hover-color-main">Картинки</span>
+                        </a>
+                        <a href="" class="category-list__item link" tabindex="-1">
+                            <span class="link__content _additional-color _hover-color-main">Видео</span>
+                        </a>
+                        <a href="" class="category-list__item link" tabindex="-1">
+                            <span class="link__content _additional-color _hover-color-main">Ответы</span>
+                        </a>
+                    </section>
+                    
+                    <div class="news-list">
+                        <a class="news-list__item link" contenteditable="true">
+                            <span class="link__content _additional-color _news">Lorem ipsum dolor sit amet,
+                                        consectetur
+                                        adipisicing elit. At cumque labore, necessitatibus sint tempora veritatis.</span>
+                        </a>
+                        <a class="news-list__item link" contenteditable="true">
+                            <span class="link__content _additional-color _news">Lorem ipsum dolor sit amet,
+                                        consectetur
+                                        adipisicing elit. At cumque labore, necessitatibus sint tempora veritatis.</span>
+                        </a>
+                        <a class="news-list__item link" contenteditable="true">
+                            <span class="link__content _additional-color _news">Lorem ipsum dolor sit amet,
+                                        consectetur
+                                        adipisicing elit. At cumque labore, necessitatibus sint tempora veritatis.</span>
+                        </a>
+                        <a class="news-list__item link" contenteditable="true">
+                            <span class="link__content _additional-color _news">Lorem ipsum dolor sit amet,
+                                        consectetur
+                                        adipisicing
+                                        elit. Aliquid, tenetur.</span>
+                        </a>
+                        <a class="news-list__item link" contenteditable="true">
+                            <span class="link__content _additional-color _news">Lorem ipsum dolor sit amet,
+                                        consectetur
+                                        adipisicing
+                                        elit. Accusantium, dolores.</span>
+                        </a>
                     </div>
                 </section>
             </div>
