HTML-CSS-learning-3 / dev / mail     - Полность. сделанный mail

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
         <nav class="menu">
             <ul>
                 <li><span>INDEX</span></li>
-                <li><a href="HTML/">HTML</a></li>
             </ul>
         </nav>
     </header>
@@ -37,8 +36,8 @@
                 <h2 id="2">Ссылки для дз</h2>
                 <ul>
                     <li><a href="./yandex">yandex</a></li>
-                    <li><a href="mail_old">Старый mail</a></li>
                     <li><a href="mail">mail</a></li>
+                    <li><a href="css-tricks">tricks</a></li>
                 </ul>
             </article>
         </section>
